# cloudformation-s3-auto-empty-hook

./: .env  .yamllint  README.md  deploy-stacks.sh  lambda-hook-infrastructure.yaml  pre-commit-check.sh  pyproject.toml  s3-bucket-resources.yaml  upload-test-files.sh
src/lambda-hooks/empty-s3-bucket/: index.py
